--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -32,3 +32,32 @@ body {
      position: absolute;
      z-index: -1;	
 }
+
+/* Slide 31 */
+/* Slide 47 delete .project CSS
+.project {
+
+	/* Slide 44 
+	margin-left: 20px;
+	background-color: #deebf7;
+	padding: 20px;
+	width: 525px;
+	
+}
+*/
+
+/* Slide 41 */
+p {
+	font-variant: small-caps;
+}
+
+/* Slide 42 */
+.project p {
+	font-variant: small-caps;
+}
+
+/* Slide 43 */
+#project1 {
+	font-variant: small-caps;
+}
+
